Версия 0.6.9 (Android 0.2.9): автоматическая переподпись APK своим сертификатом
Некоторые магнитолы (Changan на платформе WutongOS) проверяют serial
number сертификата устанавливаемого APK против зашитого в прошивку
белого списка — обычный adb install/pm install не проходит. Теперь при
наличии files/resign_cert/{private.pk8,certificate.crt} у модели APK
автоматически переподписывается перед установкой: на десктопе через
бандл минимального JRE + apksigner.jar (app/apk_signer.py), на Android —
через официальную библиотеку Google apksig (usb/ApkResign.kt).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>